# ch32v003_chal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
docs/: 01_core.md  02_pwr.md  03_rcc.md  06_exti.md  07_gpio_afio.md  EXTIn.md  GPIO_and_AFIO_doc.md  USART_doc.md  doc.md  highcode.md
include/hal/: core.h  exti.h  gpio.h  lib.h  pfic.h  pwr.h  rcc.h  systick.h  usart.h
